# Keyboard

./: .gitignore
apps/BluetoothDebug/: Android.bp  AndroidManifest.xml
apps/BuildWidget/: Android.bp
apps/Development/: Android.bp  AndroidManifest.xml
cmds/monkey/: Android.bp
gki/: Android.bp  Android.mk  run-script-test.sh  script_test.xml
gki/kmi_abi_chk/: Android.bp  Makefile  README  kmi_compatibility_test.mk  kmi_compatibility_test.sh  kmi_static_chk.mk  kmi_static_chk.sh  kmi_sym-7618735.ko  kmi_sym-gki510-2021-07.ko  kmi_sym_main.c
gsi/build_with_kernel/: pack_boot_for_signing.sh  repack_kernels_common.sh  update_kernel_prebuilts_515_arm64.sh
gsi/repack_super_image/: mix_ssi_images.py  mix_ssi_with_device_image.py  repack_super_image.py
host/windows/: Android.bp
multitree/: build_vendor.sh  find_build_id.py
python-packages/: Android.bp
python-packages/adb/: device.py
python-packages/fetchartifact/: README.md  pyproject.toml
python-packages/fetchartifact/fetchartifact/: __init__.py
python-packages/fetchartifact/tests/: test_fetchartifact.py
python-packages/gdbrunner/: __init__.py
samples/AconfigDemo/: Android.bp  AndroidManifest.xml  (+1 more)
scripts/: Android.bp  OWNERS  acov-llvm.py  aday  add3prf.py  cargo2android.py  cargo2rulesmk.py  gdbclient.py  gdbclient_test.py  show_ninja_log.py  stack  stack_core.py  symbol.py  update_crate_tests.py  vendorize.sh  x86_cpu_features.py
scripts/c2a/: Android.bp  Cargo.toml
scripts/c2a/src/: cargo_out.rs  main.rs
sdk/: Android.bp  plat_tools_source.prop_template
sys-img/: images_armeabi_source.prop_template
treble/: combined_build_test.sh  compare_build_trace.py  read_build_trace_gz.py
vendor_snapshot/: modify_bp_for_hwasan.sh  update.py
(+254 files in other folders)
