[package]
name = "c2a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cargo_toml = "0.13.0"
clap = { version = "4.0.26", features = ["derive"] }
glob = "0.3.0"
once_cell = "1.16.0"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
